TBC - 0.19.0
- [NEW] - Added Aurora Layer to online map
- [NEW] - Map Setting is saved (issue #140)
- [NEW] - QSO Duration (issue #158)
- [NEW] - DX Cluster uses monospace font (issue #164)
- [NEW] - Awards - if click on the Entity/band the logbook filter is set (issue #168)

2023/01/15 - 0.18.0
- [NEW] - ADIF 3.1.4 updates
        - Added new modes FREEDV and M17
        - Added new band (submm)
        - Adopted Altitude (for SOTA only)
        - Adopted POTA (includes POTA List)
        - Adopted Gridsquare_ext (only import/export)
        - Adopted Hamlogeu_* (only import/export)
        - Adopted HamQTH_* (only import/export)
- [NEW] - Added new DXCC Status and color for it - Confirmed
- [NEW] - New Contact - Tab selection is saved
- [NEW] - Grid can contain 8-characters
- [NEW] - User filter can contain NULL value
- [NEW] - Compilation - added variables for external sources
- [NEW] - My DXCC/CQZ/ITUZ/Country is filled
- [NEW] - Alerts - Added Aging (issue #153)
- [NEW] - Alerts - Added DXCC Status Color (issue #153)
- [NEW] - DXC - Added Log Status to filter (issue #154)
- [NEW] - DXC - Added Spot deduplication to filter (issue #154)
- [NEW] - WSJTX - Added CQ-Spot Filter (issue #155)
- [NEW] - QSO Detail contains DXCC Tab (issue #156)
- [CHANGED] - New QSO DXCC Tab reworked (issue #144)
- [CHANGED] - All DXCC Stats are computed based on My DXCC instead of My Callsign
- [CHANGED] - Station Profile Setting layout

2022/12/18 - 0.17.0
- [NEW] - NetPort and Polling interval can be defined for NET Rigs
- [NEW] - NetPort can be defined for NET Rots
- [NEW] - Added Saving Bandmap Zoom per band (issue #137)
- [NEW] - CW speed synchronisation (issue #139)
- Fixed Missing callbook data when callsign has prefix (issue #133)
- Fixed Winkey2 echo chars are incorrectly displayed in CW Console (issue #141)
- [CHANGED] - Online Map - Gray-Line is enabled by default
- Update Timezone database

2022/11/20 - 0.16.0
- [NEW] - SOTA/IOTA lists updated regularly